// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfilePage /> Renders correctly in various states app loading 1`] = `
<div>
  <div
    class="profile-page"
  >
    <div>
      <div
        class="d-flex justify-content-center align-items-center flex-column height-50vh"
      >
        <div
          class="spinner-border text-primary"
          role="status"
        >
          <span
            class="sr-only"
          >
            Profile loading...
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProfilePage /> Renders correctly in various states successfully redirected to not found page 1`] = `
<div>
  <div
    class="profile-page"
  >
    <div
      class="profile-page-bg-banner bg-primary d-md-block align-items-center h-100 w-100 px-120px py-5.5"
    >
      <div
        class="col container-fluid w-100 h-100 bg-white py-0 rounded-75 px-40px"
      >
        <div
          class="col h-100 w-100 px-0 justify-content-start g-15rem py-36px"
        >
          <div
            class="row-auto d-flex flex-wrap align-items-center h-100 w-100 justify-content-start g-15rem flex-row"
          >
            <div
              class="profile-avatar-wrap position-relative"
            >
              <div
                class="profile-avatar rounded-circle bg-light"
              >
                <div
                  aria-hidden="true"
                  class="text-muted"
                  data-testid="IconMock"
                  focusable="false"
                  role="img"
                  viewbox="0 0 24 24"
                />
              </div>
              <form
                enctype="multipart/form-data"
              >
                <input
                  accept=".jpg, .jpeg, .png"
                  class="d-none form-control-file"
                  id="photo-file"
                  name="file"
                  type="file"
                />
              </form>
            </div>
            <div
              class="col h-100 w-100 m-0 p-0 justify-content-start align-items-start"
            >
              <p
                class="row m-0 font-weight-bold text-truncate text-primary-500 h3"
              >
                staffTest
              </p>
              <div
                class="row pt-2 m-0 g-1rem"
              />
            </div>
            <div
              class="p-0  col-auto"
            />
          </div>
        </div>
        <div
          class="ml-auto"
        />
      </div>
    </div>
    <div
      class="col d-inline-flex h-100 w-100 align-items-start justify-content-start g-3rem px-120px py-6"
    >
      <div
        class="w-100 p-0"
      />
    </div>
    <div
      class="col container-fluid d-inline-flex bg-color-grey-FBFAF9 h-100 w-100 align-items-start justify-content-start g-3rem px-120px py-6"
    />
  </div>
</div>
`;

exports[`<ProfilePage /> Renders correctly in various states viewing other profile with all fields 1`] = `
<div>
  <div
    class="profile-page"
  >
    <div
      class="profile-page-bg-banner bg-primary d-md-block align-items-center h-100 w-100 px-120px py-5.5"
    >
      <div
        class="col container-fluid w-100 h-100 bg-white py-0 rounded-75 px-40px"
      >
        <div
          class="col h-100 w-100 px-0 justify-content-start g-15rem py-36px"
        >
          <div
            class="row-auto d-flex flex-wrap align-items-center h-100 w-100 justify-content-start g-15rem flex-row"
          >
            <div
              class="profile-avatar-wrap position-relative"
            >
              <div
                class="profile-avatar rounded-circle bg-light"
              >
                <div
                  aria-hidden="true"
                  class="text-muted"
                  data-testid="IconMock"
                  focusable="false"
                  role="img"
                  viewbox="0 0 24 24"
                />
              </div>
              <form
                enctype="multipart/form-data"
              >
                <input
                  accept=".jpg, .jpeg, .png"
                  class="d-none form-control-file"
                  id="photo-file"
                  name="file"
                  type="file"
                />
              </form>
            </div>
            <div
              class="col h-100 w-100 m-0 p-0 justify-content-start align-items-start"
            >
              <p
                class="row m-0 font-weight-bold text-truncate text-primary-500 h3"
              >
                verified
              </p>
              <div
                class="row pt-2 m-0 g-1rem"
              >
                <span
                  class="small mb-0 text-gray-800"
                >
                  Member since 
                  <span
                    class="font-weight-bold"
                  >
                     
                    2017
                     
                  </span>
                </span>
              </div>
            </div>
            <div
              class="p-0  col-auto"
            />
          </div>
        </div>
        <div
          class="ml-auto"
        />
      </div>
    </div>
    <div
      class="col d-inline-flex h-100 w-100 align-items-start justify-content-start g-3rem px-120px py-6"
    >
      <div
        class="w-100 p-0"
      >
        <div
          class="row"
        >
          <div
            class="col-lg-3 mb-4 mb-lg-0"
          >
            <div
              class="position-lg-sticky pgn__card pgn__card-light card"
              style="top: 0px;"
              tabindex="-1"
            >
              <div
                class="pgn__card-section"
              >
                <div
                  class="flex-column nav nav-pills"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link active"
                      data-biodata-nav="basicInformation"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-primary"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-primary"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Basic Information
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Current
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="physicalMedicalInformation"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Physical / Medical Information
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="contactInformation"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Contact Information
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="education"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Education
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="achievements"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Achievements
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="languages"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Languages
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="employment"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Employment
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="competitiveExaminations"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Competitive Examinations
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="cssExamDetails"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          CSS Exam Details
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="governmentServiceDetails"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Government Service Details
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="personalInterests"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Personal Interests
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="foreignVisits"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Foreign Visits
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="familyInformation"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Family Information
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="siblings"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Siblings
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="closeRelativesInGovernmentService"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                        <span
                          class="border-left flex-grow-1 mt-1 mb-n2 border-light-500"
                          style="min-height: 1.25rem;"
                        />
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Close Relatives in Government Service
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="mb-2 d-flex align-items-stretch text-left position-relative nav-link"
                      data-biodata-nav="declaration"
                      href="#"
                      role="button"
                    >
                      <span
                        aria-hidden="true"
                        class="d-flex flex-column align-items-center flex-shrink-0 mr-2"
                      >
                        <span
                          class="d-inline-flex align-items-center justify-content-center flex-shrink-0 text-gray-700"
                          style="width: 1.25rem; min-height: 1.75rem; z-index: 1;"
                        >
                          <span
                            class="d-inline-block rounded-circle bg-gray-700"
                            style="width: 0.5rem; height: 0.5rem;"
                          />
                        </span>
                      </span>
                      <span
                        class="pb-2"
                      >
                        <span
                          class="font-weight-bold d-block"
                        >
                          Declaration
                        </span>
                        <span
                          class="small d-block text-muted"
                        >
                          Not started
                        </span>
                        <span
                          class="small text-muted d-block"
                        >
                          No information added
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-lg-9"
          >
            <div
              class="shadow-sm pgn__card pgn__card-light card"
              id="biodata-section-basicInformation"
              tabindex="-1"
            >
              <div
                class="pgn__card-section"
              >
                <div
                  class="mb-3"
                >
                  <div
                    class="font-weight-bold text-gray-900 h5 mb-1"
                  >
                    Basic Information
                  </div>
                  <div
                    class="small text-muted"
                  >
                    Core personal biodata details.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col container-fluid d-inline-flex bg-color-grey-FBFAF9 h-100 w-100 align-items-start justify-content-start g-3rem px-120px py-6"
    />
  </div>
</div>
`;

exports[`<ProfilePage /> Renders correctly in various states viewing own profile 1`] = `
<div>
  <div
    class="profile-page"
  >
    <div
      class="profile-page-bg-banner bg-primary d-md-block align-items-center h-100 w-100 px-120px py-5.5"
    >
      <div
        class="col container-fluid w-100 h-100 bg-white py-0 rounded-75 px-40px"
      >
        <div
          class="col h-100 w-100 px-0 justify-content-start g-15rem py-36px"
        >
          <div
            class="row-auto d-flex flex-wrap align-items-center h-100 w-100 justify-content-start g-15rem flex-row"
          >
            <div
              class="profile-avatar-wrap position-relative"
            >
              <div
                class="profile-avatar rounded-circle bg-light"
              >
                <img
                  alt="profile avatar"
                  class="w-100 h-100 d-block rounded-circle overflow-hidden object-fit-cover"
                  data-hj-suppress="true"
                  src="http://localhost:18000/media/profile-images/d2a9bdc2ba165dcefc73265c54bf9a20_500.jpg?v=1552495012"
                />
              </div>
              <div
                class="profile-avatar-button"
              >
                <div
                  class="pgn__dropdown pgn__dropdown-light dropdown"
                  data-testid="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="btn-icon btn-icon-inverse-primary btn-icon-md btn-icon-inverse-primary-active shadow-sm pgn__dropdown-toggle-iconbutton"
                    id="dropdown-toggle-with-iconbutton"
                    type="button"
                  >
                    <span
                      class="btn-icon__icon-container"
                    >
                      <span
                        class="pgn__icon btn-icon__icon"
                      >
                        <svg
                          aria-hidden="true"
                          fill="none"
                          focusable="false"
                          height="24"
                          role="img"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
                            fill="currentColor"
                          />
                          <path
                            d="M9 2 7.17 4H2v16h20V4h-5.17L15 2H9Zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <form
                enctype="multipart/form-data"
              >
                <input
                  accept=".jpg, .jpeg, .png"
                  class="d-none form-control-file"
                  id="photo-file"
                  name="file"
                  type="file"
                />
              </form>
            </div>
            <div
              class="col h-100 w-100 m-0 p-0 justify-content-start align-items-start"
            >
              <p
                class="row m-0 font-weight-bold text-truncate text-primary-500 h3"
              >
                staff
              </p>
              <div
                class="row pt-2 m-0 g-1rem"
              >
                <span
                  class="small mb-0 text-gray-800"
                >
                  Member since 
                  <span
                    class="font-weight-bold"
                  >
                     
                    2017
                     
                  </span>
                </span>
                <span
                  class="small m-0 text-gray-800"
                >
                  <span
                    class="font-weight-bold"
                  >
                    1
                  </span>
                   certifications
                </span>
              </div>
            </div>
            <div
              class="p-0  col-auto"
            >
              <a
                class="pgn__hyperlink default-link standalone-link btn btn-brand bg-brand-500 font-weight-normal px-4 py-10px text-nowrap"
                href="http://localhost:18150/records"
                rel="noopener noreferrer"
                target="_blank"
              >
                View My Records
              </a>
            </div>
          </div>
        </div>
        <div
          class="ml-auto"
        />
      </div>
    </div>
    <div
      class="col d-inline-flex h-100 w-100 align-items-start justify-content-start g-3rem px-120px py-6"
    >
      <div
        class="w-100 p-0"
      >
        <div
          class="shadow-sm pgn__card pgn__card-light card"
          tabindex="-1"
        >
          <div
            class="pgn__card-section bg-primary text-white"
          >
            <div
              class="d-flex flex-wrap align-items-center justify-content-between mb-0"
            >
              <h2
                class="h4 mb-0 text-white"
              >
                Instructor
              </h2>
              <div
                class="pgn__form-checkbox mb-0 text-white"
              >
                <input
                  checked=""
                  class="pgn__form-checkbox-input"
                  id="form-field1"
                  readonly=""
                  type="checkbox"
                />
                <div>
                  <label
                    class="pgn__form-label"
                    for="form-field1"
                  >
                    New Instructor outside FBR
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pgn__card-section"
          >
            <form
              class=""
            >
              <div
                class="row"
              >
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field2"
                  >
                    Name
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field2"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field3"
                  >
                    Short Name
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field3"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field4"
                  >
                    Designation
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field4"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field5"
                  >
                    Phone
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field5"
                      type="tel"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field6"
                  >
                    Mobile
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field6"
                      type="tel"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field7"
                  >
                    Address
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field7"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field8"
                  >
                    Expertise
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field8"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field9"
                  >
                    Organization
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field9"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field10"
                  >
                    Email
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field10"
                      type="email"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <button
                class="btn btn-primary"
                type="submit"
              >
                Save
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col container-fluid d-inline-flex bg-color-grey-FBFAF9 h-100 w-100 align-items-start justify-content-start g-3rem px-120px py-6"
    >
      <div>
        <div
          class="col justify-content-start align-items-start g-5rem p-0"
        >
          <div
            class="col align-self-stretch height-42px justify-content-start align-items-start p-0"
          >
            <p
              class="font-weight-bold text-primary-500 m-0 h2"
            >
              Your certificates
            </p>
          </div>
          <div
            class="col justify-content-start align-items-start pt-2 p-0"
          >
            <p
              class="font-weight-normal text-gray-800 m-0 p-0 p"
            >
              Your learner records information is only visible to you. Only your username and profile image are visible to others on localhost.
            </p>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="row align-items-center pt-5 g-3rem"
          >
            <div
              class="col-auto d-flex align-items-center p-0"
            >
              <div
                class="col certificate p-4 border-light-400 bg-light-200 w-100 h-100"
              >
                <div
                  class="certificate-type-illustration"
                  style="background-image: url("icon/mock/path");"
                />
                <div
                  class="d-flex flex-column position-relative p-0 width-314px"
                >
                  <div
                    class="w-100 color-black"
                  >
                    <p
                      class="mb-0 font-weight-normal small"
                    >
                      Verified Certificate
                    </p>
                    <p
                      class="m-0 color-black h4"
                    >
                      edX Demonstration Course
                    </p>
                    <p
                      class="mb-0 small"
                    >
                      From
                    </p>
                    <h5
                      class="mb-0 color-black"
                    >
                      edX
                    </h5>
                    <p
                      class="mb-0 small"
                    >
                      Completed on 
                      3/4/2019
                    </p>
                  </div>
                  <div
                    class="pt-3"
                  >
                    <a
                      class="pgn__hyperlink default-link standalone-link btn btn-primary font-weight-normal px-4 py-10px"
                      href="http://www.example.com/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      View Certificate
                    </a>
                  </div>
                  <p
                    class="mb-0 pt-3 small"
                  >
                    Credential ID 
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProfilePage /> Renders correctly in various states without credentials service 1`] = `
<div>
  <div
    class="profile-page"
  >
    <div
      class="profile-page-bg-banner bg-primary d-md-block align-items-center h-100 w-100 px-120px py-5.5"
    >
      <div
        class="col container-fluid w-100 h-100 bg-white py-0 rounded-75 px-40px"
      >
        <div
          class="col h-100 w-100 px-0 justify-content-start g-15rem py-36px"
        >
          <div
            class="row-auto d-flex flex-wrap align-items-center h-100 w-100 justify-content-start g-15rem flex-row"
          >
            <div
              class="profile-avatar-wrap position-relative"
            >
              <div
                class="profile-avatar rounded-circle bg-light"
              >
                <img
                  alt="profile avatar"
                  class="w-100 h-100 d-block rounded-circle overflow-hidden object-fit-cover"
                  data-hj-suppress="true"
                  src="http://localhost:18000/media/profile-images/d2a9bdc2ba165dcefc73265c54bf9a20_500.jpg?v=1552495012"
                />
              </div>
              <div
                class="profile-avatar-button"
              >
                <div
                  class="pgn__dropdown pgn__dropdown-light dropdown"
                  data-testid="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="btn-icon btn-icon-inverse-primary btn-icon-md btn-icon-inverse-primary-active shadow-sm pgn__dropdown-toggle-iconbutton"
                    id="dropdown-toggle-with-iconbutton"
                    type="button"
                  >
                    <span
                      class="btn-icon__icon-container"
                    >
                      <span
                        class="pgn__icon btn-icon__icon"
                      >
                        <svg
                          aria-hidden="true"
                          fill="none"
                          focusable="false"
                          height="24"
                          role="img"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
                            fill="currentColor"
                          />
                          <path
                            d="M9 2 7.17 4H2v16h20V4h-5.17L15 2H9Zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <form
                enctype="multipart/form-data"
              >
                <input
                  accept=".jpg, .jpeg, .png"
                  class="d-none form-control-file"
                  id="photo-file"
                  name="file"
                  type="file"
                />
              </form>
            </div>
            <div
              class="col h-100 w-100 m-0 p-0 justify-content-start align-items-start"
            >
              <p
                class="row m-0 font-weight-bold text-truncate text-primary-500 h3"
              >
                staff
              </p>
              <div
                class="row pt-2 m-0 g-1rem"
              >
                <span
                  class="small mb-0 text-gray-800"
                >
                  Member since 
                  <span
                    class="font-weight-bold"
                  >
                     
                    2017
                     
                  </span>
                </span>
                <span
                  class="small m-0 text-gray-800"
                >
                  <span
                    class="font-weight-bold"
                  >
                    1
                  </span>
                   certifications
                </span>
              </div>
            </div>
            <div
              class="p-0  col-auto"
            />
          </div>
        </div>
        <div
          class="ml-auto"
        />
      </div>
    </div>
    <div
      class="col d-inline-flex h-100 w-100 align-items-start justify-content-start g-3rem px-120px py-6"
    >
      <div
        class="w-100 p-0"
      >
        <div
          class="shadow-sm pgn__card pgn__card-light card"
          tabindex="-1"
        >
          <div
            class="pgn__card-section bg-primary text-white"
          >
            <div
              class="d-flex flex-wrap align-items-center justify-content-between mb-0"
            >
              <h2
                class="h4 mb-0 text-white"
              >
                Instructor
              </h2>
              <div
                class="pgn__form-checkbox mb-0 text-white"
              >
                <input
                  checked=""
                  class="pgn__form-checkbox-input"
                  id="form-field21"
                  readonly=""
                  type="checkbox"
                />
                <div>
                  <label
                    class="pgn__form-label"
                    for="form-field21"
                  >
                    New Instructor outside FBR
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pgn__card-section"
          >
            <form
              class=""
            >
              <div
                class="row"
              >
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field22"
                  >
                    Name
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field22"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field23"
                  >
                    Short Name
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field23"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field24"
                  >
                    Designation
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field24"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field25"
                  >
                    Phone
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field25"
                      type="tel"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field26"
                  >
                    Mobile
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field26"
                      type="tel"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field27"
                  >
                    Address
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field27"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field28"
                  >
                    Expertise
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field28"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field29"
                  >
                    Organization
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field29"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pgn__form-group col-md-6 mb-3"
                >
                  <label
                    class="pgn__form-label"
                    for="form-field30"
                  >
                    Email
                  </label>
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="form-control"
                      id="form-field30"
                      type="email"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <button
                class="btn btn-primary"
                type="submit"
              >
                Save
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col container-fluid d-inline-flex bg-color-grey-FBFAF9 h-100 w-100 align-items-start justify-content-start g-3rem px-120px py-6"
    >
      <div>
        <div
          class="col justify-content-start align-items-start g-5rem p-0"
        >
          <div
            class="col align-self-stretch height-42px justify-content-start align-items-start p-0"
          >
            <p
              class="font-weight-bold text-primary-500 m-0 h2"
            >
              Your certificates
            </p>
          </div>
          <div
            class="col justify-content-start align-items-start pt-2 p-0"
          >
            <p
              class="font-weight-normal text-gray-800 m-0 p-0 p"
            >
              Your learner records information is only visible to you. Only your username and profile image are visible to others on localhost.
            </p>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="row align-items-center pt-5 g-3rem"
          >
            <div
              class="col-auto d-flex align-items-center p-0"
            >
              <div
                class="col certificate p-4 border-light-400 bg-light-200 w-100 h-100"
              >
                <div
                  class="certificate-type-illustration"
                  style="background-image: url("icon/mock/path");"
                />
                <div
                  class="d-flex flex-column position-relative p-0 width-314px"
                >
                  <div
                    class="w-100 color-black"
                  >
                    <p
                      class="mb-0 font-weight-normal small"
                    >
                      Verified Certificate
                    </p>
                    <p
                      class="m-0 color-black h4"
                    >
                      edX Demonstration Course
                    </p>
                    <p
                      class="mb-0 small"
                    >
                      From
                    </p>
                    <h5
                      class="mb-0 color-black"
                    >
                      edX
                    </h5>
                    <p
                      class="mb-0 small"
                    >
                      Completed on 
                      3/4/2019
                    </p>
                  </div>
                  <div
                    class="pt-3"
                  >
                    <a
                      class="pgn__hyperlink default-link standalone-link btn btn-primary font-weight-normal px-4 py-10px"
                      href="http://www.example.com/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      View Certificate
                    </a>
                  </div>
                  <p
                    class="mb-0 pt-3 small"
                  >
                    Credential ID 
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
